Quyen_PlaceRushOrder_SOLID